--- a/cockroachdb-statefulset.yaml
+++ b/cockroachdb-statefulset.yaml
@@ -21,6 +21,9 @@ spec:
   selector:
     app: cockroachdb
   type: LoadBalancer
+  externalIPs:
+  - 192.168.49.2
+
 ---
 apiVersion: v1
 kind: Service
